--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "songdata",
+  "repository": "git@github.com:christopherthomasdesign/songdata.git",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
@@ -11,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.0",
-    "browserify": "^14.5.0",
-    "dotenv": "^4.0.0"
+    "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0",
+    "path": "^0.12.7"
   }
 }
